--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   name: Yingchen Xu
   email: yingchen.xu.21@ucl.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Homepage of Yingchen Xu, a CS PhD student at UCL and FAIR London.
+  Homepage of Yingchen Xu
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ycxuyingchen.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: YingchenX
