Update Google Scholar ID in config file

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "https://ycxuyingchen.github.io" # the base hostname & protocol for your si
 # github_username:  yukichul
 minima:
   social_links:
-    google_scholar_id: -CqyjXEAAAAJ
+    google_scholar_id: -JbfMp6gAAAAJ
     github: ycxuyingchen
     twitter: YingchenX
     instagram: ycxuxu
